desenv_tests/test-assets/desenv/failure/desenv_wrong_usage_1.rs
use desenv::Desenv;

#[derive(Desenv)]
struct Config {
    #[desenv]
    field: String
}

fn main(){}